# tc_client_sdk_new

./: CMakeLists.txt  app_timer.cpp  app_timer.h  cast_receiver.cpp  cast_receiver.h  connection.cpp  connection.h  decoder_render_type.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  mediacodec_video_decoder.cpp  mediacodec_video_decoder.h  net_client.cpp  net_client.h  raw_image.cpp  raw_image.h  readme.md  sdk_cast_receiver.cpp  sdk_errors.cpp  sdk_errors.h  sdk_ffmpeg_d3d11va_decoder.cpp  sdk_ffmpeg_d3d11va_decoder.h  sdk_ffmpeg_decoder.cpp  sdk_ffmpeg_decoder.h  sdk_ffmpeg_soft_decoder.cpp  sdk_ffmpeg_soft_decoder.h  sdk_ffmpeg_video_decoder.cpp  sdk_ffmpeg_video_decoder.h  sdk_ffmpeg_vulkan_decoder.cpp  sdk_ffmpeg_vulkan_decoder.h  sdk_mediacodec_video_decoder.cpp  sdk_mediacodec_video_decoder.h  sdk_messages.h  sdk_net_client.cpp  sdk_net_client.h  sdk_params.h  sdk_statistics.cpp  sdk_statistics.h  sdk_stream_helper.cpp  sdk_timer.cpp  (+22 more)
connection/: CMakeLists.txt  connection.cpp  connection.h  relay_connection.cpp  relay_connection.h  udp_connection.cpp  udp_connection.h  webrtc_connection.cpp  webrtc_connection.h  ws_connection.cpp  ws_connection.h  wss_connection.cpp  wss_connection.h
connection/webrtc/: ct_rtc_manager.cpp  ct_rtc_manager.h  webrtc_connection.cpp  webrtc_connection.h
gl/: director.cpp  director.h  gl_function.h  raw_image.cpp  raw_image.h  renderer.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h
